add and remove working very good on Shellv2